--- a/server/tests-py/queries/event_triggers/create-delete/create_trigger_operation_specs_not_provided_err.yaml
+++ b/server/tests-py/queries/event_triggers/create-delete/create_trigger_operation_specs_not_provided_err.yaml
@@ -10,7 +10,7 @@
   url: /v1/query
   status: 400
   response:
-    error: at least one among the insert/update/delete operation specs must be provided
+    error: at least one among the insert/update/delete/manual specs must be provided
     code: parse-failed
     path: $
   query:
