--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -213,8 +213,8 @@ library
                      , Hasura.GraphQL.Execute
                      , Hasura.GraphQL.Execute.Plan
                      , Hasura.GraphQL.Execute.Context
+                     , Hasura.GraphQL.Execute.LiveQuery
                      , Hasura.GraphQL.Resolve
-                     , Hasura.GraphQL.Resolve.LiveQuery
                      , Hasura.GraphQL.Resolve.BoolExp
                      , Hasura.GraphQL.Resolve.Context
                      , Hasura.GraphQL.Resolve.InputValue
