--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -173,6 +173,7 @@ library
                      , Hasura.RQL.DDL.Relationship
                      , Hasura.RQL.DDL.Relationship.Rename
                      , Hasura.RQL.DDL.Relationship.Types
+                     , Hasura.RQL.DDL.Relationship.Remote
                      , Hasura.RQL.DDL.QueryTemplate
                      , Hasura.RQL.DDL.Schema.Table
                      , Hasura.RQL.DDL.Schema.Rename
