--- a/server/src-rsr/hdb_metadata.yaml
+++ b/server/src-rsr/hdb_metadata.yaml
@@ -279,3 +279,23 @@ args:
         column_mapping:
           return_type_schema: table_schema
           return_type_name: table_name
+
+- type: track_table
+  args:
+    name: hdb_computed_column
+    schema: hdb_catalog
+
+- type: create_array_relationship
+  args:
+    name: computed_columns
+    table:
+      schema: hdb_catalog
+      name: hdb_table
+    using:
+      manual_configuration:
+        remote_table:
+          schema: hdb_catalog
+          name: hdb_computed_column
+        column_mapping:
+          table_schema: table_schema
+          table_name: table_name
