--- a/community/learn/graphql-tutorials/tutorials/react-apollo/app-boilerplate/package.json
+++ b/community/learn/graphql-tutorials/tutorials/react-apollo/app-boilerplate/package.json
@@ -10,9 +10,9 @@
     "bootstrap": "^4.1.3",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "^16.5.1",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   },
@@ -20,7 +20,7 @@
     "husky": "^1.0.0-rc.15",
     "lint-staged": "^7.3.0",
     "prettier": "1.14.3",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +28,11 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
